--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -130,6 +130,13 @@ p {
   color: #afafaf;
 }
 
+#product p.price {
+  font-size: 15px;
+  line-height: 30px;
+  font-weight: 200;
+  color: #636363;
+}
+
 img {
   width: 100%;
   overflow: hidden;
@@ -147,12 +154,12 @@ body {
 }
 
 ::selection {
-  background: #fa65b1;
+  background: #2c23e2;
   color: #fff !important;
 }
 
 ::-moz-selection {
-  background: #fa65b1;
+  background: #2c23e2;
   color: #fff !important;
 }
 
@@ -184,7 +191,7 @@ body {
 .section-heading h6 {
   font-size: 15px;
   font-weight: 700;
-  color: #726ae3;
+  color: #2c23e2;
   text-transform: uppercase;
   margin-bottom: 15px;
 }
@@ -199,7 +206,7 @@ body {
 
 .section-heading h4 em {
   font-style: normal;
-  color: #726ae3;
+  color: #2c23e2;
 }
 
 .section-heading .line-dec {
@@ -211,8 +218,9 @@ body {
 .border-first-button a {
   display: inline-block !important;
   padding: 10px 20px !important;
-  color: #fa65b1 !important;
-  border: 1px solid #fa65b1 !important;
+  background-color: #fff;
+  color: #2c23e2 !important;
+  border: none;
   border-radius: 23px;
   font-weight: 500 !important;
   letter-spacing: 0.3px !important;
@@ -220,8 +228,7 @@ body {
 }
 
 .border-first-button a:hover {
-  background-color: #fa65b1;
-  color: #fff !important;
+  opacity: 0.75;
 }
 
 
@@ -289,8 +296,8 @@ intro
 .intro-banner a {
   display: inline-block !important;
   padding: 10px 20px !important;
-  color: #fa65b1 !important;
-  border: 1px solid #fa65b1 !important;
+  color: #2c23e2 !important;
+  border: 1px solid #2c23e2 !important;
   border-radius: 23px;
   font-weight: 500 !important;
   letter-spacing: 0.3px !important;
@@ -300,11 +307,12 @@ intro
 }
 
 .intro-banner a:hover {
-  background-color: #fa65b1;
-  color: #fff !important;
+  background-color: #fff;
+  color: #2c23e2 !important;
+  opacity: 0.75;
 }
 
-.demos {
+.product {
   padding-top: 60px;
 }
 
@@ -313,22 +321,40 @@ intro
   z-index: 2;
 }
 
-.demos img {
+.product img {
   transition: all .5s;
   border-radius: 23px;
 }
 
-.demos img:hover {
+.product img:hover {
   opacity: 1;
   box-shadow: 0px 0px 15px rgba(0,0,0,0.25);
 }
 
-.demos h4 {
+.product h4 {
   text-align: center;
   font-size: 20px;
   margin-top: 30px;
   font-weight: 700;
   text-transform: uppercase;
+}
+
+.product h4.stream {
+  color: #FE0001;
+}
+.product h4.joy {
+  color: #006AC3;
+}
+.product h4.star {
+  color: orangered;
+}
+
+.product p {
+  text-align: center;
+  color: #000;
+  font-size: 20px;
+  margin-top: 10px;
+  font-weight: 500;
 }
 
 
@@ -408,7 +434,7 @@ header
 }
 
 .background-header .main-nav .nav li:hover a {
-  color: #fa65b1;
+  color: #2c23e2;
 }
 
 .background-header .nav li a.active {
@@ -420,7 +446,7 @@ header
   position: absolute;
   width: 100%;
   height: 1px;
-  background-color: #fa65b1;
+  background-color: #2c23e2;
   content: '';
   left: 50%;
   bottom: -20px;
@@ -493,22 +519,6 @@ header
   padding-right: 20px;
 }
 
-.header-area .main-nav .nav li:last-child {
-  padding-right: 0px;
-  padding-left: 40px;
-}
-
-.header-area .main-nav .nav li:last-child a ,
-.background-header .main-nav .nav li:last-child a {
-  padding: 0px 20px !important;
-  font-weight: 400;
-}
-
-.header-area .main-nav .nav li:last-child a:hover ,
-.background-header .main-nav .nav li:last-child a:hover {
-  color: #fff !important;
-}
-
 .header-area .main-nav .nav li a {
   display: block;
   font-weight: 500;
@@ -527,12 +537,12 @@ header
 
 .header-area .main-nav .nav li:hover a,
 .header-area .main-nav .nav li a.active {
-  color: #fa65b1!important;
+  color: #2c23e2!important;
 }
 
 .background-header .main-nav .nav li:hover a,
 .background-header .main-nav .nav li a.active {
-  color: #fa65b1!important;
+  color: #2c23e2!important;
   opacity: 1;
 }
 
@@ -594,7 +604,7 @@ header
 
 .header-area .main-nav .nav li.submenu ul li a:hover {
   background: #fff;
-  color: #fa65b1!important;
+  color: #2c23e2!important;
   padding-left: 25px;
 }
 
@@ -734,7 +744,7 @@ header
 }
 
 .header-area.header-sticky .nav li a.active {
-  color: #fa65b1;
+  color: #2c23e2;
 }
 
 @media (max-width: 1200px) {
@@ -773,7 +783,7 @@ header
   }
   .header-area.header-sticky .nav li a:hover,
   .header-area.header-sticky .nav li a.active {
-    color: #fa65b1!important;
+    color: #2c23e2!important;
     opacity: 1;
   }
   .header-area.header-sticky .nav li.search-icon a {
@@ -988,6 +998,7 @@ Banner Style
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+  background-color: #0f3a91;
   padding: 226px 0px 120px 0px;
   position: relative;
   overflow: hidden;
@@ -995,7 +1006,7 @@ Banner Style
 
 .main-banner:after {
   content: '';
-  background-image: url(../images/slider-left-dec.jpg);
+  /* background-image: url(../images/slider-left-dec.jpg); */
   background-repeat: no-repeat;
   position: absolute;
   left: 0;
@@ -1007,7 +1018,7 @@ Banner Style
 
 .main-banner:before {
   content: '';
-  background-image: url(../images/slider-right-dec.jpg);
+  /* background-image: url(../images/slider-right-dec.jpg); */
   background-repeat: no-repeat;
   position: absolute;
   right: 0;
@@ -1025,7 +1036,7 @@ Banner Style
   text-transform: capitalize;
   font-size: 20px;
   font-weight: 700;
-  color: #fa65b1;
+  color: #ff8a00;
   margin-bottom: 15px;
   text-transform: uppercase;
 }
@@ -1035,7 +1046,7 @@ Banner Style
   position: relative;
   font-weight: 700;
   font-size: 50px;
-  color: #2a2a2a;
+  color: #fff;
   margin-bottom: 20px;
 }
 
@@ -1946,7 +1957,7 @@ form#contact #map iframe {
 }
 
 .fill-form .icon:hover a {
-  color: #fa65b1;
+  color: #2c23e2;
 }
 
 form#contact input {
@@ -2018,10 +2029,11 @@ Footer Style
 */
 
 footer {
-  background-image: url(../images/footer-bg.jpg);
+  /* background-image: url(../images/footer-bg.jpg); */
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: #0F1E40;
   margin-top: 130px;
 }
 
